--- a/inventory/team1/group_vars/k8s_cluster/k8s-cluster.yml
+++ b/inventory/team1/group_vars/k8s_cluster/k8s-cluster.yml
@@ -1,4 +1,5 @@
 ---
+cluster_name: skupina1-cluster
 # Kubernetes configuration dirs and system namespace.
 # Those are where all the additional config stuff goes
 # the kubernetes normally puts in /srv/kubernetes.
