--- a/inventory/team1/inventory.ini
+++ b/inventory/team1/inventory.ini
@@ -2,17 +2,14 @@
 # ## different ip than the default iface
 # ## We should set etcd_member_name for etcd cluster. The node that is not a etcd member do not need to set the value, or can set the empty string value.
 
-
 [all]
 
-node0 ansible_host=52.59.221.226 ip=192.168.97.196 access_ip=52.59.221.226 ansible_user=ubuntu ansible_become=yes
-node1 ansible_host=52.28.28.144 ip=192.168.97.195 access_ip=52.28.28.144  ansible_user=ubuntu ansible_become=yes
-node2 ansible_host=35.157.7.232 ip=192.168.97.162 access_ip=35.157.7.232 ansible_user=ubuntu ansible_become=yes
-node3 ansible_host=3.79.236.53 ip=192.168.97.150 access_ip=3.79.236.53 ansible_user=ubuntu ansible_become=yes
+node0 anssible_host=52.59.221.226 ip=192.168.97.196 access_ip=192.168.97.196 ansible_user=ubuntu ansible_become=yes
+node1 ansible_host=52.28.28.144 ip=192.168.97.195 access_ip=192.168.97.195  ansible_user=ubuntu ansible_become=yes
+node2 ansible_host=35.157.7.232 ip=192.168.97.162 access_ip=192.168.97.162 ansible_user=ubuntu ansible_become=yes
+node3 ansible_host=3.79.236.53 ip=192.168.97.150 access_ip=<192.168.97.150 ansible_user=ubuntu ansible_become=yes
 
 # ## configure a bastion host if your nodes are not directly reachable
-[bastion]
-bastion ansible_host=x.x.x.x ansible_user=some_user
 [kube_control_plane]
 node0
 
@@ -30,4 +27,3 @@ node3
 kube_control_plane
 kube_node
 calico_rr
-﻿
